@@ -1,80 +1,88 @@
+# Beta opt-in
+# https://docs.travis-ci.com/user/build-config-validation#beta-opt-in
+version: ~> 1.0
+
 language: python
 dist: xenial
+os: linux
 
-matrix:
+env:
+  global:
+    - MAKEFLAGS="-j 2"
+
+jobs:
   fast_finish: true
   include:
     - name: Code quality checks
-      os: linux
       python: "3.8"
       env: TOXENV=lint
     - name: Types checking
-      os: linux
       python: "3.8"
       env: TOXENV=types
     - name: Documentation build
-      os: linux
       python: "3.8"
       env: TOXENV=docs
-    - os: osx
-      language: shell
-      before_install:
-        - bash .travis/install.sh
-      env:
-        - PYTHON_VERSION=3.5
-        - TOXENV=py35
-    - name: "Python 3.6 on macOS 10.13"
+    - name: Python 3.5 on macOS
       os: osx
-      osx_image: xcode9.4  # Python 3.6.5 running on macOS 10.13
       language: shell
-      env:
-        - PYTHON_VERSION=3.6
-        - TOXENV=py36
-    - name: "Python 3.7 on macOS 10.14"
+      install:
+        - eval "$(pyenv init -)"
+        - pyenv install --skip-existing 3.5.8
+        - pyenv global 3.5.8
+      env: TOXENV=py35
+    - name: Python 3.6 on macOS
       os: osx
-      osx_image: xcode11.2  # Python 3.7.4 running on macOS 10.14.4
       language: shell
-      env:
-        - PYTHON_VERSION=3.7
-        - TOXENV=py37
-    - name: "Python 3.8 on macOS 10.14"
+      install:
+        - eval "$(pyenv init -)"
+        - pyenv install --skip-existing 3.6.9
+        - pyenv global system 3.6.9
+      env: TOXENV=py36
+    - name: Python 3.7 on macOS
       os: osx
-      osx_image: xcode11.3  # Python 3.8.0 running on macOS 10.14.6
       language: shell
-      env:
-        - PYTHON_VERSION=3.8
-        - TOXENV=py38
-    - os: osx
+      install:
+        - eval "$(pyenv init -)"
+        - pyenv install --skip-existing 3.7.5
+        - pyenv global system 3.7.5
+      env: TOXENV=py37
+    - name: Python 3.8 on macOS
+      os: osx
       language: shell
-      before_install:
-        - bash .travis/install.sh
-      env:
-        - PYTHON_VERSION=3.9
-        - TOXENV=py39
-    - name: "PyPy 3.6 on GNU/Linux"
-      os: linux
-      python: "pypy3"
+      install:
+        - eval "$(pyenv init -)"
+        - pyenv install --skip-existing 3.8.0
+        - pyenv global system 3.8.0
+      env: TOXENV=py38
+    # - name: Python 3.9 on macOS
+    #   os: osx
+    #   language: shell
+    #   install:
+    #     - eval "$(pyenv init -)"
+    #     - pyenv install --skip-existing 3.9-dev
+    #     - pyenv global system 3.9-dev
+    #   env: TOXENV=py39
+    - name: PyPy 3.6 on GNU/Linux
+      python: pypy3
       env: TOXENV=pypy3
-    - name: "Python 3.5 on GNU/Linux"
-      os: linux
+    - name: Python 3.5 on GNU/Linux
       python: "3.5"
       env: TOXENV=py35
-    - name: "Python 3.6 on GNU/Linux"
-      os: linux
+    - name: Python 3.6 on GNU/Linux
       python: "3.6"
       env: TOXENV=py36
-    - name: "Python 3.7 on GNU/Linux"
-      os: linux
+    - name: Python 3.7 on GNU/Linux
       python: "3.7"
       env: TOXENV=py37
-    - name: "Python 3.8 on GNU/Linux"
-      os: linux
+    - name: Python 3.8 on GNU/Linux
       python: "3.8"
       env: TOXENV=py38
-    - name: "Python 3.9 on GNU/Linux"
-      os: linux
-      python: "nightly"
+    - name: Python 3.9 on GNU/Linux
+      python: 3.9-dev
       env: TOXENV=py39
+    # - name: Python 3.10 on GNU/Linux
+    #   python: nightly
+    #   env: TOXENV=py310
 
 addons:
   apt:
@@ -84,8 +92,8 @@ addons:
 services:
   - xvfb
 
-install:
-  - python -m pip install --upgrade pip tox
+before_script:
+  - python3 -m pip install --upgrade pip tox
 
 script:
-  - tox
+  - python3 -m tox
